update API documentation
